--- a/mycontacts/templates/mycontacts/show.html
+++ b/mycontacts/templates/mycontacts/show.html
@@ -12,6 +12,10 @@
             <div class="relation">{{ contact.relation }}</div>
             <div class="phone">{{ contact.phone }}</div>
             <div class="email"><a href='{{ contact.email }}'>{{ contact.email }}</a> </div>
+            <div class="button">
+                <a href="/editar/{{contact.id}}"><button class="btn btn_editar">Editar</button></a>
+                <a href="/excluir/{{contact.id}}"><button class="btn btn_excluir">Excluir</button></a>
+            </div>
         </div>
     </li>
     {%  endfor %}
